# induction-topology

./: .gitignore  EXPERIMENT_PLAN.md  README.md  pyproject.toml  settings.yaml
notebooks/: Playground_InductionTopology.ipynb  lens_explorer.ipynb
src/: __init__.py  causal.py  cli.py  model_registry.py  plots.py  prompts.py  robustness.py  runner.py  scoring.py
